- fixed some styling issues

--- a/shared/mock/db/job-applications.json
+++ b/shared/mock/db/job-applications.json
@@ -24,7 +24,7 @@
     "url": "https://designfirst.com/careers/frontend",
     "salaryRange": "$95,000 - $125,000",
     "stage": "applied",
-    "dateAdded": "2025-10-15T00:00:00.000Z",
+    "dateAdded": "2025-08-15T00:00:00.000Z",
     "tags": [
       "frontend",
       "vue",
@@ -40,8 +40,8 @@
     "location": "Chicago, IL",
     "url": "https://appworks.com/careers/mobile",
     "salaryRange": "$85,000 - $115,000",
-    "stage": "rejected",
-    "dateAdded": "2025-10-01T00:00:00.000Z",
+    "stage": "applied",
+    "dateAdded": "2025-08-01T00:00:00.000Z",
     "tags": [
       "mobile",
       "react-native",
@@ -76,7 +76,7 @@
     "url": "https://creativestudio.com/careers/ux-designer",
     "salaryRange": "$80,000 - $110,000",
     "stage": "researched",
-    "dateAdded": "2025-11-12T00:00:00.000Z",
+    "dateAdded": "2025-07-12T00:00:00.000Z",
     "tags": [
       "design",
       "ux",
@@ -94,7 +94,7 @@
     "url": "https://docutech.com/jobs/technical-writer",
     "salaryRange": "$70,000 - $90,000",
     "stage": "applied",
-    "dateAdded": "2025-11-05T00:00:00.000Z",
+    "dateAdded": "2025-07-05T00:00:00.000Z",
     "tags": [
       "technical-writing",
       "documentation",
